History:

<see Git checking messages for history>

6.0.1   2020/xx/xx
      - Mac: reduce the number of function calls
      - Mac: support macOS Big Sur (fixes #178)
      - tests: fix macOS intepreter not found on Travis-CI
      - :heart: contributors: @

6.0.0   2020/06/30
      - removed usage of deprecated "license_file" option for "license_files"
      - fixed flake8 usage in pre-commit
      - the module is now available on conda (closes #170)
      - MSS: the implementation is now thread-safe on all OSes (fixes #169)
      - Linux: better handling of the Xrandr extension (fixes #168)
      - tests: fixed a random bug on test_grab_with_tuple_percents() (fixes #142)

5.1.0   2020/04/30
      - produce wheels for Python 3 only
      - MSS: renamed again MSSMixin to MSSBase, now derived from abc.ABCMeta
      - tools: force write of file when saving a PNG file
      - tests: fix tests on macOS with Retina display
      - Windows: fixed multi-thread safety (fixes #150)
      - :heart: contributors: @narumishi

5.0.0   2019/12/31
      - removed support for Python 2.7
      - MSS: improve type annotations and add CI check
      - MSS: use __slots__ for better performances
      - MSS: better handle resources to prevent leaks
      - MSS: improve monitors finding
      - Windows: use our own instances of GDI32 and User32 DLLs
      - doc: add project_urls to setup.cfg
      - doc: add an example using the multiprocessing module (closes #82)
      - tests: added regression tests for #128 and #135
      - tests: move tests files into the package
      - :heart: contributors: @hugovk, @foone, @SergeyKalutsky

4.0.2   2019/02/23
      - new contributor: foone
      - Windows: ignore missing SetProcessDPIAware() on Window XP (fixes #109)

4.0.1   2019/01/26
      - Linux: fix several XLib functions signature (fixes #92)
      - Linux: improve monitors finding by a factor of 44

4.0.0   2019/01/11
      - MSS: remove use of setup.py for setup.cfg